apply plugin: 'groovy'
apply plugin: 'java'

group 'com.keimons.platform'
version '1.0.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_11

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

repositories {
    jcenter()
}

test {
    filter {
        // 指定测试包路径
        includeTestsMatching "com.keimons.platform.*"
    }
}

dependencies {
    compile project (':keimons-basic')

    // 数据库
    implementation 'org.redisson:redisson:3.7.5', {
        transitive false
    }

    // 序列化相关
    implementation 'com.alibaba:fastjson:1.2.54'
    implementation 'com.google.protobuf:protobuf-java:3.13.0'
    implementation 'com.baidu:jprotobuf:2.2.14', {
        transitive false
    }

    // 数据压缩
    implementation 'org.xerial.snappy:snappy-java:1.1.7.3'

    // 拓展库
    implementation 'com.google.guava:guava:30.1-jre'

    // 脚本语言groovy
    implementation 'org.codehaus.groovy:groovy:3.0.7'

    // ASM
    implementation 'org.ow2.asm:asm:8.0.1'
    implementation 'org.ow2.asm:asm-commons:8.0.1'

    // 环形Buffer
    implementation 'com.lmax:disruptor:3.3.7'

    implementation 'io.netty:netty-all:4.1.27.Final'
    implementation 'org.apache.mina:mina-core:2.1.4'

    // 定时任务框架
    implementation 'org.quartz-scheduler:quartz:2.3.0', {
        transitive false
    }

    implementation 'org.slf4j:slf4j-api:1.7.25'

    // 增强注解
    implementation 'org.jetbrains:annotations:20.1.0'

    testImplementation 'junit:junit:4.12'
}

//task sourcesJar(type: Jar) {
//    from sourceSets.main.allJava
//    classifier 'sources'
//}

//task javadocJar(type: Jar) {
//    from javadoc
//    classifier 'javadoc'
//}


//publishing {
//    // 定义发布什么
//    publications.create('publish', MavenPublication, {
//        // groupId = project.group
//        // artifactId = project.name
//        // version = project.version
//        // groupId,artifactId,version，如果不定义，则会按照以上默认值执行
//        from components.findByName('java')
//
//        artifact sourcesJar
//        artifact javadocJar
//        pom {
//            // 构件名称
//            // 区别于artifactId，可以理解为artifactName
//            name = 'Keimons Platform'
//            // 构件描述
//            description = 'Keimons Platform Library'
//            // 构件主页
//            url = 'https://keimons.com'
//            // 许可证名称和地址
//            licenses {
//                license {
//                    name = 'The Apache License, Version 2.0'
//                    url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
//                }
//            }
//            // 开发者信息
//            developers {
//                developer {
//                    name = 'monkey1993'
//                    email = 'monkey1993@keimons.com'
//                }
//            }
//            // 版本控制仓库地址
//            scm {
//                url = 'https://github.com/keimons/keimons-platform'
//                connection = 'scm:git:git://github.com/keimons/keimons-platform.git'
//                developerConnection = 'scm:git:ssh://git@github.com:keimons/keimons-platform.git'
//            }
//        }
//    })
//    // 定义发布到哪里
//    repositories.maven {
//        url "https://oss.sonatype.org/content/repositories/snapshots"
//        //url "https://oss.sonatype.org/service/local/staging/deploy/maven2"
//        credentials {
//            // 这里就是之前在issues.sonatype.org注册的账号
//            username sonatypeUsername
//            password sonatypePassword
//        }
//    }
//}

//signing {
//    sign publishing.publications.publish
//}

compileJava {
    options.compilerArgs += ['--module-path', classpath.asPath]
    options.compilerArgs += ['--add-exports', 'java.base/jdk.internal.vm.annotation=ALL-UNNAMED,keimons.platform.main']
    options.compilerArgs += ['--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED']
    options.compilerArgs += ['--add-exports', 'java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED,keimons.platform.main']
}

//tasks.withType(Test) {
//    jvmArgs += "--enable-preview"
//}

javadoc {
    options.encoding = "UTF-8"
    options.charSet = "UTF-8"
}